[ADD]生成二维码具体的类

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
   <!--创建班级-->
   <string name="teacher_name">班主任姓名</string>
   <string name="teacher_number">班主任工号</string>
-  <string name="class_number">班级名称</string>
+  <string name="class_name">班级名称</string>
   <string name="import_students_info">导入学生信息</string>
   <string name="import_teacher_info">导入科任老师信息</string>
 
